syntax = "proto3";

package rivet.backend.pkg.chat.last_read_ts_get;

import "proto/common.proto";

message Request {
    rivet.common.Uuid user_id = 1;
    repeated rivet.common.Uuid thread_ids = 2;
}

message Response {
    message Thread {
        rivet.common.Uuid thread_id = 1;
        int64 last_read_ts = 2;
    }

    repeated Thread threads = 1;
}
